--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   http: ^0.13.1
   uuid: ^2.2.2
   json_annotation: ^4.0.0
+  url_launcher: ^6.0.3
+  # add this line to your dependencies
+  toast: ^0.1.5
 
 dev_dependencies:
   flutter_test:
