--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
   <application android:label="courier_prototype" android:icon="@mipmap/ic_launcher">
 
-    <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyC1OPHCFm8_Uty6HKqNTCiZyl0rPOUyZRE"/>
+    <meta-data  android:usesCleartextTraffic="true" android:name="com.google.android.geo.API_KEY" android:value="AIzaSyC1OPHCFm8_Uty6HKqNTCiZyl0rPOUyZRE"/>
 
     <activity android:name=".MainActivity" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
       <!-- Specifies an Android theme to apply to this Activity as soon as
