--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   uuid: ^2.2.2
   json_annotation: ^4.0.0
   url_launcher: ^6.0.3
-  # add this line to your dependencies
   toast: ^0.1.5
+  webview_flutter: ^2.0.4
 
 dev_dependencies:
   flutter_test:
